--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "description": "",
   "devDependencies": {
     "vitepress": "^1.5.0"
+  },
+  "dependencies": {
+    "katex": "^0.16.11"
   }
 }
